fixed navbar layout on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,10 +100,45 @@ a.navbar-brand {
   transform: rotateY(180deg);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 990px) {
   .card {
     max-width: 80vw;
     max-height: unset;
     flex-basis: 80%;
   }
+
+  .btn {
+    visibility:hidden;
+    margin-right: 0px;
+  }
+
+  a.navbar-brand {
+    display:flex;
+    padding-top:10px;
+    padding-left:10px;
+    height: 50px;
+    background-image: none;
+    text-indent: 0;
+    font-size:20px;
+    color: #1F4736;
+  }
+
+  .navbar-toggler {
+    margin-right:-120px;
+    margin-left:auto;
+    width: 10%;
+    height: 10%;
+    border: none;
+  } 
+
+  a.hamburger {
+  display:inline-block;
+  margin-right: 5px;
+  width: 40px;
+  height: 40px;
+  background-size: 100%;
+  background-image: url(../img/hamburger.png);
+  text-indent: -999em;
+  }
+
 }
